--- a/index.html
+++ b/index.html
@@ -1,20 +1,86 @@
-<!-- أزرار التحميل مع النصوص العربية -->
-<div class="button-container">
-    <!-- زر تحميل من Google Play -->
-    <a href="https://play.google.com/store/apps/details?id=co.median.android.zeermn&hl=en" target="_blank">
-        <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play">
-        <span class="button-label">تحميل من Google Play</span>
-    </a>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تحميل التطبيق</title>
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon.png">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            text-align: center;
+            background-color: #f4f4f4;
+            direction: rtl;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        p {
+            font-size: 18px;
+            color: #34495e;
+        }
+        .button-container {
+            margin: 30px 0;
+        }
+        .svg-button {
+            width: 180px;
+            height: auto;
+            margin: 15px;
+            transition: transform 0.3s, opacity 0.3s;
+            cursor: pointer;
+        }
+        .svg-button:hover {
+            transform: scale(1.1);
+            opacity: 0.8;
+        }
+        .button-label {
+            display: block;
+            font-size: 18px;
+            margin-top: 5px;
+            color: #2c3e50;
+        }
+        footer {
+            margin-top: 30px;
+            color: #7f8c8d;
+        }
+    </style>
+</head>
+<body>
 
-    <!-- زر تحميل من Apple App Store -->
-    <a href="https://apps.apple.com/us/app/%D8%AA%D8%B1%D8%A7%D8%AB-%D8%A7%D9%84%D8%B3%D9%8A%D8%AF-%D8%A7%D9%84%D8%B5%D8%AF%D8%B1/id6745227789?uo=4" target="_blank">
-        <img class="svg-button" src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="App Store">
-        <span class="button-label">تحميل من App Store</span>
-    </a>
+    <!-- الرسالة الإشرافية -->
+    <h2>إن هذا التطبيق بإشراف سماحة حجة الإسلام والمسلمين السيد مقتدى الصدر (أعزه الله)</h2>
 
-    <!-- زر تحميل من Huawei AppGallery -->
-    <a href="https://appgallery.huawei.com/#/app/C113183335" target="_blank">
-        <img class="svg-button" src="https://consumer.huawei.com/content/dam/huawei-cbg-site/common/mkt/pdp/appgallery/button-install-appgallery.png" alt="AppGallery">
-        <span class="button-label">تحميل من AppGallery</span>
-    </a>
-</div>
+    <!-- عنوان الصفحة -->
+    <h1>تحميل التطبيق</h1>
+    <p>يمكنك تحميل تطبيقنا من المتاجر الرسمية باستخدام الروابط أدناه:</p>
+
+    <!-- أزرار التحميل -->
+    <div class="button-container">
+        <!-- زر Google Play -->
+        <a href="https://play.google.com/store/apps/details?id=co.median.android.zeermn&hl=en" target="_blank">
+            <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play">
+            <span class="button-label">تحميل من Google Play</span>
+        </a>
+
+        <!-- زر App Store -->
+        <a href="https://apps.apple.com/us/app/%D8%AA%D8%B1%D8%A7%D8%AB-%D8%A7%D9%84%D8%B3%D9%8A%D8%AF-%D8%A7%D9%84%D8%B5%D8%AF%D8%B1/id6745227789?uo=4" target="_blank">
+            <img class="svg-button" src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="App Store">
+            <span class="button-label">تحميل من App Store</span>
+        </a>
+
+        <!-- زر Huawei AppGallery -->
+        <a href="https://appgallery.huawei.com/#/app/C113183335" target="_blank">
+            <img class="svg-button" src="https://consumer.huawei.com/content/dam/huawei-cbg-site/common/mkt/pdp/appgallery/button-install-appgallery.png" alt="AppGallery">
+            <span class="button-label">تحميل من AppGallery</span>
+        </a>
+    </div>
+
+    <p>إذا كانت لديك أي استفسارات، يرجى التواصل معنا عبر <a href="mailto:turathalsadr@gmail.com">turathalsadr@gmail.com</a>.</p>
+
+    <footer>
+        <p>هيئة تراث الشهيد السيد محمد الصدر (قدس سره)</p>
+    </footer>
+
+</body>
+</html>
