--- a/index.html
+++ b/index.html
@@ -48,30 +48,27 @@
 </head>
 <body>
 
-    <!-- الرسالة الإشرافية -->
     <h2>إن هذا التطبيق بإشراف سماحة حجة الإسلام والمسلمين السيد مقتدى الصدر (أعزه الله)</h2>
 
-    <!-- عنوان الصفحة -->
     <h1>تحميل التطبيق</h1>
     <p>يمكنك تحميل تطبيقنا من المتاجر الرسمية باستخدام الروابط أدناه:</p>
 
-    <!-- أزرار التحميل -->
     <div class="button-container">
-        <!-- زر Google Play -->
+        <!-- Google Play -->
         <a href="https://play.google.com/store/apps/details?id=co.median.android.zeermn&hl=en" target="_blank">
             <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play">
             <span class="button-label">تحميل من Google Play</span>
         </a>
 
-        <!-- زر App Store -->
+        <!-- Apple App Store -->
         <a href="https://apps.apple.com/us/app/%D8%AA%D8%B1%D8%A7%D8%AB-%D8%A7%D9%84%D8%B3%D9%8A%D8%AF-%D8%A7%D9%84%D8%B5%D8%AF%D8%B1/id6745227789?uo=4" target="_blank">
             <img class="svg-button" src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="App Store">
             <span class="button-label">تحميل من App Store</span>
         </a>
 
-        <!-- زر Huawei AppGallery -->
+        <!-- Huawei AppGallery -->
         <a href="https://appgallery.huawei.com/#/app/C113183335" target="_blank">
-            <img class="svg-button" src="https://consumer.huawei.com/content/dam/huawei-cbg-site/common/mkt/pdp/appgallery/button-install-appgallery.png" alt="AppGallery">
+            <img class="svg-button" src="https://i.ibb.co/J3Tbqb4/appgallery-download.png" alt="AppGallery">
             <span class="button-label">تحميل من AppGallery</span>
         </a>
     </div>
