--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <!-- Huawei AppGallery -->
         <a href="https://appgallery.huawei.com/#/app/C113183335" target="_blank">
-            <img class="svg-button" src="https://i.ibb.co/J3Tbqb4/appgallery-download.png" alt="AppGallery">
+            <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Huawei_AppGallery_badge_EN.svg/512px-Huawei_AppGallery_badge_EN.svg.png" alt="AppGallery">
             <span class="button-label">تحميل من AppGallery</span>
         </a>
     </div>
