--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
     <div class="button-container">
         <!-- Google Play -->
         <a href="https://play.google.com/store/apps/details?id=co.median.android.zeermn&hl=en" target="_blank">
-            <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play">
+            <img class="svg-button" src="googleplay.png" alt="Google Play">
             <span class="button-label">تحميل من Google Play</span>
         </a>
 
-        <!-- Apple App Store -->
+        <!-- App Store -->
         <a href="https://apps.apple.com/us/app/%D8%AA%D8%B1%D8%A7%D8%AB-%D8%A7%D9%84%D8%B3%D9%8A%D8%AF-%D8%A7%D9%84%D8%B5%D8%AF%D8%B1/id6745227789?uo=4" target="_blank">
-            <img class="svg-button" src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="App Store">
+            <img class="svg-button" src="appstore.png" alt="App Store">
             <span class="button-label">تحميل من App Store</span>
         </a>
 
-        <!-- Huawei AppGallery -->
+        <!-- AppGallery -->
         <a href="https://appgallery.huawei.com/#/app/C113183335" target="_blank">
-            <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Huawei_AppGallery_badge_EN.svg/512px-Huawei_AppGallery_badge_EN.svg.png" alt="AppGallery">
+            <img class="svg-button" src="appgallery.png" alt="AppGallery">
             <span class="button-label">تحميل من AppGallery</span>
         </a>
     </div>
