--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!-- زر تحميل من Huawei AppGallery -->
         <a href="https://appgallery.huawei.com/#/app/C113183335" target="_blank">
-            <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/3/3e/AppGallery_%28Huawei%29_logo.svg" alt="AppGallery">
+            <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Huawei_AppGallery_badge_EN.svg/512px-Huawei_AppGallery_badge_EN.svg.png" alt="AppGallery">
             <span class="button-label">تحميل من AppGallery</span>
         </a>
     </div>
