--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="button-container">
         <!-- زر تحميل من Google Play -->
         <a href="https://play.google.com/store/apps/details?id=co.median.android.zeermn&hl=en" target="_blank">
-            <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play">
+            <img class="svg-button" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Google Play">
             <span class="button-label">تحميل من Google Play</span>
         </a>
 
@@ -67,7 +67,7 @@
 
         <!-- زر تحميل من Huawei AppGallery -->
         <a href="https://appgallery.huawei.com/#/app/C113183335" target="_blank">
-            <img class="svg-button" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Huawei_AppGallery_badge_EN.svg/512px-Huawei_AppGallery_badge_EN.svg.png" alt="AppGallery">
+            <img class="svg-button" src="appgallery.png" alt="AppGallery">
             <span class="button-label">تحميل من AppGallery</span>
         </a>
     </div>
