--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     <h2>إن هذا التطبيق بإشراف سماحة حجة الإسلام والمسلمين السيد مقتدى الصدر (أعزه الله)</h2>
 
-    <h1>تحميل التطبيق</h1>
+    <h1>تحميل تطبيق (تراث السيد الصدر)</h1>
     <p>يمكنك تحميل تطبيقنا من المتاجر الرسمية باستخدام الروابط أدناه:</p>
 
     <div class="button-container">
