--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+تم استبدال البريد الإلكتروني كما طلبت. إليك الكود بعد التعديل:
+
+```html
+<p>إذا كانت لديك أي استفسارات، يرجى التواصل معنا عبر <a href="mailto:info@turathalsayedalsadr.app">info@turathalsayedalsadr.app</a>.</p>
+```
+
+والكود الكامل المعدل هو:
+
+```html
 <!DOCTYPE html>
 <html lang="ar">
 <head>
@@ -73,10 +82,11 @@
         </a>
     </div>
 
-    <p>إذا كانت لديك أي استفسارات، يرجى التواصل معنا عبر <a href="mailto:turathalsadr@gmail.com">turathalsadr@gmail.com</a>.</p>
+    <p>إذا كانت لديك أي استفسارات، يرجى التواصل معنا عبر <a href="mailto:info@turathalsayedalsadr.app">info@turathalsayedalsadr.app</a>.</p>
 
     <footer>
         <p>هيئة تراث الشهيد السيد محمد الصدر (قدس سره)</p>
     </footer>
 </body>
 </html>
+```
