--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </a>
     </div>
 
-    <p>إذا كانت لديك أي استفسارات، يرجى التواصل معنا عبر <a href="mailto:info@turathalsayedalsadr.app">info@turathalsayedalsadr.app</a>.</p>
+    <p>إذا كانت لديك أي استفسارات، يرجى التواصل معنا عبر <a href="mailto:turathalsadr@gmail.com">turathalsadr@gmail.com</a>.</p>
 
     <footer>
         <p>هيئة تراث الشهيد السيد محمد الصدر (قدس سره)</p>
